fix defect: flex-wrap is not working in sifari.

--- a/src/index.less
+++ b/src/index.less
@@ -217,6 +217,7 @@
 			outline: 1px solid #eee;
 			border-bottom: 3px solid white;
 			transition: 500ms;
+			-webkit-flex: 1 1 200px;
 			&:hover {
 				border-bottom-color: #cc574d;
 				transform: translateY(-1em);
